.provarCaches/00D410000011HE0EAM/objects/rstkf__glfatxn__c.object
<CustomObject>
    <description>glfatxn__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <description>altextid__c</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT(rstkf__glfatxn_txntype__c) &amp; &apos; (&apos; &amp; TEXT(rstkf__glfatxn_txndate__c) &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_acctdate__c</fullName>
        <description>glfatxn_acctdate__c</description>
        <inlineHelpText>This represents the date that this Fixed Asset transaction impacted the General Ledger.</inlineHelpText>
        <label>Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_amount__c</fullName>
        <description>glfatxn_amount__c</description>
        <inlineHelpText>The value of the transaction in Home currency.</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfatxn_apinvtxn__c</description>
        <inlineHelpText>Name of the AP Invoice transaction through which the fixed asset was acquired. It has a lookup to Payable Transactions.</inlineHelpText>
        <label>Acquired on Payables Invoice</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>glfatxns</relationshipLabel>
        <relationshipName>glfatxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_convertfcst__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glfatxn_convertfcst__c</description>
        <label>Convert Forecast to Actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_deprcalc__c</fullName>
        <description>glfatxn_deprcalc__c</description>
        <inlineHelpText>Reference method used for calculating the depreciation value for the fixed asset.</inlineHelpText>
        <label>Depreciation Calculation Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_deprmethod__c</fullName>
        <description>glfatxn_deprmethod__c</description>
        <inlineHelpText>Indicates the method used for calculating the asset’s depreciation value. Depreciation methods are Straight Line, Declining Balance, Sum Of Years, MACRS (Modified Accelerated Cost Recovery System) and User Defined methods.</inlineHelpText>
        <label>Depreciation Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_deprmonths__c</fullName>
        <description>glfatxn_deprmonths__c</description>
        <label>Months Depreciated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_deprperiod__c</fullName>
        <description>glfatxn_deprperiod__c</description>
        <inlineHelpText>Frequency with which depreciation run is scheduled. Depreciation Frequency
values are Monthly (scheduled for every month), Quarterly (scheduled for every quarter of a year), Annually (scheduled for every year).</inlineHelpText>
        <label>Depreciation Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_depryear__c</fullName>
        <description>glfatxn_depryear__c</description>
        <label>Depreciation Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_glfa__c</fullName>
        <description>glfatxn_glfa__c</description>
        <inlineHelpText>This is the Fixed asset to be associated with the transaction. It has a lookup to GL Fixed Asset.</inlineHelpText>
        <label>Fixed Asset</label>
        <referenceTo>rstkf__glfa__c</referenceTo>
        <relationshipLabel>Fixed Asset Transactions</relationshipLabel>
        <relationshipName>glfatxns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_gljh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfatxn_gljh__c</description>
        <inlineHelpText>Name of the Journal Entry header in which the adjustments to the fixed asset are made. It has a lookup to Journal Entry Header.</inlineHelpText>
        <label>Journal Entry</label>
        <referenceTo>rstkf__gljh__c</referenceTo>
        <relationshipLabel>glfatxn</relationshipLabel>
        <relationshipName>glfatxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_intercompany__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glfatxn_intercompany__c</description>
        <inlineHelpText>When this checkbox is enabled, the transaction is considered as a part of intercompany transactions (transactions that occur between companies).</inlineHelpText>
        <label>Part of an Intercompany Txn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_porcptap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfatxn_porcptap__c</description>
        <inlineHelpText>Name of the Purchase Order Receipt transaction through which the fixed asset was acquired. It has a lookup to PO Receipt Transaction.</inlineHelpText>
        <label>Acquired on PO Receipt</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>glfatxns</relationshipLabel>
        <relationshipName>Fixed_Asset_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that a depreciation transaction has been posted to the GL and GLTXNs created for it</inlineHelpText>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_reference__c</fullName>
        <description>glfatxn_reference__c</description>
        <inlineHelpText>This is an auto assigned unique identifier for this Fixed Asset transaction.</inlineHelpText>
        <label>Transaction Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_soinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Sales Order Invoice in which the fixed asset got retired (sold). It has a lookup to Sales Order Invoice.</inlineHelpText>
        <label>Retired on Sales Invoice</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>glfatxns</relationshipLabel>
        <relationshipName>glfatxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_sytxncst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfatxn_sytxncst__c</description>
        <inlineHelpText>The name of the cost transaction associated with this fixed asset transaction. It has a lookup to Cost Transaction list for selection.</inlineHelpText>
        <label>Cost Transaction</label>
        <referenceTo>rstk__sytxncst__c</referenceTo>
        <relationshipLabel>glfatxns</relationshipLabel>
        <relationshipName>glfatxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_takeondepr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glfatxn_takeondepr__c</description>
        <inlineHelpText>This checkbox should be selected for take-on depreciation transaction.</inlineHelpText>
        <label>Take-On Depreciation Txn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_thrudate__c</fullName>
        <description>glfatxn_thrudate__c</description>
        <inlineHelpText>The date up to which the current depreciation transaction is valid until. For example, if the accounting date is 03/31/2019 and depreciation is “Quarterly”, then the Through date will be 06/30/2019.</inlineHelpText>
        <label>Depreciated Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_txndate__c</fullName>
        <description>glfatxn_txndate__c</description>
        <inlineHelpText>The date that the Fixed Asset transaction occurred.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_txntype__c</fullName>
        <inlineHelpText>The identifier which represents a specific type of Fixed Asset transaction. Examples are; Addition, Depreciation, Retirement.</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Adjustment-Up</fullName>
                </value>
                <value>
                    <fullName>Adjustment-Down</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Event Audit</fullName>
                </value>
                <value>
                    <fullName>Depreciation Clearing</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Partial Disposal</fullName>
                </value>
                <value>
                    <fullName>Take On Summary Depreciation</fullName>
                </value>
                <value>
                    <fullName>Post Revaluation Addition</fullName>
                    <isActive>false</isActive>
                    <label>Post Revaluation Addition</label>
                </value>
                <value>
                    <fullName>Post Revaluation Adjustment-Down</fullName>
                    <isActive>false</isActive>
                    <label>Post Revaluation Adjustment-Down</label>
                </value>
                <value>
                    <fullName>Post Revaluation Adjustment-Up</fullName>
                    <isActive>false</isActive>
                    <label>Post Revaluation Adjustment-Up</label>
                </value>
                <value>
                    <fullName>Post Revaluation Partial Disposal</fullName>
                    <isActive>false</isActive>
                    <label>Post Revaluation Partial Disposal</label>
                </value>
                <value>
                    <fullName>Revaluation</fullName>
                    <isActive>false</isActive>
                    <label>Revaluation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfatxn_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfatxn_wocst__c</description>
        <inlineHelpText>Name of the Work Order through which the fixed asset was acquired. It has a lookup to the WO Cost Transaction.</inlineHelpText>
        <label>Acquired on Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>glfatxns</relationshipLabel>
        <relationshipName>glfatxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Fixed Asset Transaction</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_txntype__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_deprmethod__c</columns>
        <columns>rstkf__glfatxn_thrudate__c</columns>
        <columns>rstkf__glfatxn_deprcalc__c</columns>
        <columns>rstkf__glfatxn_convertfcst__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <columns>rstkf__glfatxn_depryear__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Acquisitions</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txntype__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_convertfcst__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <columns>rstkf__glfatxn_deprmethod__c</columns>
        <columns>rstkf__glfatxn_apinvtxn__c</columns>
        <columns>rstkf__glfatxn_porcptap__c</columns>
        <columns>rstkf__glfatxn_wocst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Acquisition,Addition</value>
        </filters>
        <label>FA - Acquisitions and Additions</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_reference__c</columns>
        <columns>rstkf__glfatxn_txntype__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Adjustment-Up,Adjustment-Down</value>
        </filters>
        <label>FA - Adjustments</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Depreciation</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <columns>rstkf__glfatxn_deprmethod__c</columns>
        <columns>rstkf__glfatxn_thrudate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Depreciation</value>
        </filters>
        <label>FA - Depreciation</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Depreciation_Clearing</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_reference__c</columns>
        <columns>rstkf__glfatxn_txntype__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstkf__glfatxn_sytxncst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Depreciation Clearing</value>
        </filters>
        <label>FA - Depreciation Clearing</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Event_Audit</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_reference__c</columns>
        <columns>rstkf__glfatxn_txntype__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Event Audit</value>
        </filters>
        <label>FA - Event Audit</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Forecast</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_convertfcst__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <columns>rstkf__glfatxn_deprmethod__c</columns>
        <columns>rstkf__glfatxn_thrudate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </filters>
        <filters>
            <field>rstkf__glfatxn_glfa__c</field>
            <operation>startsWith</operation>
            <value>40</value>
        </filters>
        <label>FA - Forecast</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Post_Revaluation</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_reference__c</columns>
        <columns>rstkf__glfatxn_txntype__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Post Revaluation Addition,Post Revaluation Adjustment-Up,Post Revaluation Adjustment-Down</value>
        </filters>
        <label>FA - Post-Revaluation</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Retirements_Disposals</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_reference__c</columns>
        <columns>rstkf__glfatxn_txntype__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Retirement,Partial Disposal</value>
        </filters>
        <label>FA - Retirements / Disposals</label>
    </listViews>
    <listViews>
        <fullName>rstkf__FA_Revaluation</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfatxn_glfa__c</columns>
        <columns>rstkf__glfatxn_txndate__c</columns>
        <columns>rstkf__glfatxn_acctdate__c</columns>
        <columns>rstkf__glfatxn_amount__c</columns>
        <columns>rstkf__glfatxn_reference__c</columns>
        <columns>rstkf__glfatxn_txntype__c</columns>
        <columns>rstkf__glfatxn_posted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Revaluation</value>
        </filters>
        <label>FA - Revaluation</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Asset Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>